# pysfo

./: .gitignore  README.md  pyproject.toml  pysfo.toml  requirements.txt  run_pytests.sh  setup.py
src/experimental/: work.py
src/pysfo/: __init__.py  config.py  exceptions.py
src/pysfo.egg-info/: PKG-INFO  SOURCES.txt
src/pysfo/basic/: __init__.py  basicfns.py  io_tools.py  lazy_import.py  regfns.py  time_utils.py
src/pysfo/basic/date_utils/: convert_dates.py
src/pysfo/basic/geo_utils/: country_groups.py
src/pysfo/basic/io_tools/: __init__.py  config_loader.py  io_tools_various.py
src/pysfo/basic/pandas_utils/: groupby_apply_various.py  other_various.py
src/pysfo/batch_jobs/: tests.py
src/pysfo/dbnomicstools/: __init__.py  config.py
src/pysfo/dbnomicstools/imf_ifs/: __init__.py  dbnomics_datastructure.json  get_filters.py
src/pysfo/llmtools/: config.py  generate_code.py
src/pysfo/pulldata/: __init__.py  cmns.py  config.py  efa_row.py  exceptions.py  exchangerates.py  fetch_fred_api.py  fof.py  fomc_dates.py  frb_exchangerates.py  fred.py  geo_globals.py  imf_ifs.py  other.py  z_DEPRECATED_geo_globals.py
tests/: conftest.py  setpaths.py  start_interactive.py
tests/interactive/: __init__.py  config.py  scratch.py  setpaths.py  test_pulldata.py
tests/main/: setpaths.py  test_pulldata.py
tests/pulldata/: test_cmns.py  test_efa_row.py  test_fetch_fred_api.py  test_fof.py  test_fomc_dates.py  test_frb_exchangerates.py  test_fred.py  test_imf_bop.py  test_imf_ifs.py  test_imf_weo.py  test_other.py  test_rest.py  test_wb_wdi.py
(+36 files in other folders)
